--- a/app/index.html
+++ b/app/index.html
@@ -15,25 +15,15 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="angNewsApp">
+  <body ng-app"app">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
+<p>hi</p>
 
-<div ng-include="'views/nav.html'"></div>
-<div class="container" ng-view=""></div>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -54,16 +44,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/posts.js"></script>
-        <script src="scripts/controllers/postview.js"></script>
-        <script src="scripts/controllers/nav.js"></script>
-        <script src="scripts/services/post.js"></script>
-        <script src="scripts/filters/url.js"></script>
-        <script src="scripts/controllers/auth.js"></script>
-        <script src="scripts/services/auth.js"></script>
-        <script src="/scripts/services/profile.js"></script>
-        <script src="scripts/controllers/profile.js"></script>
+
 
         <!-- endbuild -->
 </body>
