--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,16 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app"app">
+  <body ng-app"app" ng-controller="MainCtrl">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-<p>hi</p>
+<p>hi {{test}} </p>
+
+
+<search-input></search-input>
 
 
 
@@ -44,8 +47,8 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-
-
+        <script src="js/app.js"></script>
+        <script src="js/directives/searchinput.js"></script>
         <!-- endbuild -->
 </body>
 </html>
